--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "this is my custom Secret key for authentication",
+    "Issuer": "https://localhost:5117",
+    "Audience": "https://localhost:5117"
+  }
 }
